# udi-grammar-py

./: README.md  pyproject.toml  test.ipynb
.github/workflows/: release.yml
src/udi_grammar_py/: __init__.py  op.py  spec.py
tests/: test_spec.py
udi-grammar-py/: pyproject.toml
