[project]
name = "udi-grammar-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dev-lan", email = "devinscottlange@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
